# reverie

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Mobile Design.pen  README.md  THIRD-PARTY-NOTICES.md  biome.json  commitlint.config.mjs  mockup.html  package-lock.json  package.json  panda.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: terminal-debug-bridge.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons-dev/: icon.icns
apps/desktop/src-tauri/native/: reverie_bookmark.m  reverie_clipboard.m
apps/desktop/src-tauri/src/: activity_bridge.rs  agent_automation.rs  agent_trust.rs  app_shell.rs  bookmark.rs  bridge.rs  bridge_installer.rs  clipboard.rs  codex_titles.rs  commands.rs  connection_commands.rs  correlator.rs  dispatch.rs  dispatch_tap.rs  git_watch.rs  keep_awake.rs  main.rs  path_env.rs  reentry_summary.rs  shutdown_marker.rs  speech_commands.rs  state.rs  terminal_backend.rs  terminal_runtime.rs
apps/desktop/src-tauri/src/terminal/: ghostty.rs  history.rs  mod.rs  orphans.rs  reaper.rs  runtime.rs  transcript.rs  wire.rs
apps/desktop/web/: App.tsx  CrtTuningPanel.tsx  TauriTerminalStressProof.tsx  TerminalBridgeDebug.tsx  WorkspaceShell.tsx  agentAutomation.ts  appRuntime.ts  crtLoading.tsx  dotField.ts  dropField.ts  harness-smoke.mjs  harnessSmoke.ts  index.html  main.css  main.tsx  resumeBloom.ts  stateField.ts  styles.css  terminal-canvas-renderer.js  terminal-canvas-renderer.ts  terminal-gpu-renderer.ts  terminal-render-proof.js  terminalCrt.ts  terminalScrollback.ts  terminalTypes.ts  vite-env.d.ts
apps/desktop/web/domain/: activity.test.ts  activity.ts  archive.ts  connection.ts  constants.ts  dispatch.ts  format.test.ts  format.ts  index.ts  kittyKeyboard.test.ts  kittyKeyboard.ts  navState.test.ts  navState.ts  palette.test.ts  palette.ts  session.test.ts  session.ts  shellPath.test.ts  shellPath.ts  shortcuts.ts  speech.ts  terminalClaim.test.ts  terminalClaim.ts  terminalInput.test.ts  terminalInput.ts  types.ts
apps/desktop/web/hooks/: busyGuard.ts  index.ts  useAgentClis.ts  useAppFocus.ts  useAppQuit.ts  useAutoUpdate.ts  useCommandPalette.ts  useConnectionsState.ts  useCreationForm.ts  useDispatchLaunch.ts  useFileDrop.ts  useGitStatus.ts  useNavPersistence.ts  useNavReorder.ts  useReorderFocuses.ts  useScrollbarFade.ts  useSessionActivity.ts  useSessionTabShortcuts.ts  useSessionTitle.ts  useSessionViewed.ts  useShellNavigation.ts  useSidebarFolderDrop.ts  useSidebarResize.ts  useSpeechCapture.ts  useSpeechEngine.ts  useTerminalFileDrop.ts  useTerminalSession.ts  useWebviewHeartbeat.ts  useWorkspaceModel.ts  useWorkspaceMutations.ts
apps/desktop/web/services/: connectionsApi.ts  dispatchApi.ts  fixtures.ts  gitApi.ts  openApi.ts  runtime.ts  shellApi.ts  speechApi.ts  terminalApi.ts  terminalBridge.ts  types.ts  updateApi.ts  windowControls.ts
apps/desktop/web/store/: activityStore.ts  connectionPanelStore.ts  gitStatusStore.ts  hmr.ts  index.ts  navigationStore.ts  overlayStore.ts  paletteStore.ts  setter.ts  shellStore.test.ts  shellStore.ts  speechEngineStore.ts  terminalStore.ts  uiStore.ts  updateStore.ts
apps/desktop/web/terminal/: boxDrawing.test.ts  boxDrawing.ts  bufferModel.test.ts  bufferModel.ts  cellGeometry.ts  findModel.test.ts  findModel.ts  frameCoalescing.test.ts  frameCoalescing.ts  frameModel.test.ts  frameModel.ts  gpuRenderer.test.ts  historyJumpQueue.test.ts  historyJumpQueue.ts  historyWindowing.test.ts  historyWindowing.ts  metricSamples.test.ts  metricSamples.ts  renderer-overlay.test.ts  terminalController.test.ts  terminalController.ts  terminalMetrics.test.ts  terminalMetrics.ts  wireDecode.test.ts  wireDecode.ts
apps/desktop/web/themes/: appShell.ts  dispatchShell.ts  scrollbars.ts  surfaces.ts  terminalTheme.ts  tokens.ts  typography.ts
apps/reverie-bridge/: Cargo.toml
apps/reverie-bridge/src/: client.rs  codex_hook.rs  lib.rs  main.rs  mcp.rs  preturn_hook.rs  tools.rs
apps/reverie-bridge/tests/: e2e.rs
branding/: README.md
design/icon/: README.md  build_assets.py  grade.py
docs/: README.md  design-vision.md  ideas-and-tickets.md  product-vision.md
docs/product/: search-and-recall.md  v1-product-spec.md
docs/product/core-experience/: README.md  approval-cards.md  completions-and-reentry.md  dispatch.md  home-attention-router.md  voice-input.md
docs/technical/: activity-ingestion.md  agent-automation.md  cortex-activity-contract.md  frontend-architecture.md  implementation-queue.md  inter-agent-connections.md  packaging-and-distribution.md  tech-stack.md  technical-architecture.md  terminal-overhaul-handoff.md  terminal-strategy.md
docs/technical/remote-access/: README.md  data-channel-protocol.md  desktop-peer.md  mobile-client.md  overview.md  security-model.md
docs/technical/terminal/: README.md  architecture.md  backend.md  decisions.md  frontend.md  libghostty-0.2-adoption.md  libghostty-history-limits.md  performance-and-acceptance.md  resize-reflow-anchoring.md  scrollback-coverage-design.md  why-libghostty.md  wire-protocol.md
scripts/: changelog-extract.mjs  make-dev-icon.py  reset-dev-data.mjs  run-with-zig.mjs  set-version.mjs  stage-bridge.mjs  tauri-bundle.mjs  tauri-channel.mjs  terminal-bridge-smoke.mjs  terminal-bridge-stress.mjs  terminal-product-bridge-stress.mjs
spikes/: tauri-terminal-surface.md
spikes/ghostty-vt-proof/: Cargo.toml
spikes/ghostty-vt-proof/src/: main.rs
spikes/tauri-terminal-surface/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spikes/tauri-terminal-surface/src-tauri/capabilities/: default.json
spikes/tauri-terminal-surface/src-tauri/src/: main.rs
(+112 files in other folders)
