[workspace]
members = ["packages/reverie-core"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
portable-pty = "0.9"
notify = "8"
notify-debouncer-full = "0.6"
tempfile = "3"
