[workspace]
members = ["apps/reverie-bridge", "packages/reverie-core", "packages/reverie-persistence"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
portable-pty = "0.9"
libc = "0.2"
notify = "8"
notify-debouncer-full = "0.6"
tempfile = "3"
tiny_http = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "1.1"
toml_edit = "0.22"
sha2 = "0.10"
reverie-core = { path = "packages/reverie-core" }
