[package]
name = "reverie-bridge"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "reverie_bridge"
path = "src/lib.rs"

[[bin]]
name = "reverie-bridge"
path = "src/main.rs"

[[bin]]
name = "reverie-bridge-preturn-hook"
path = "src/preturn_hook.rs"

# Codex lifecycle-hook forwarder: reads hook JSON on stdin, POSTs it to the
# desktop app's localhost hook server. std-only, no crate deps.
[[bin]]
name = "reverie-codex-hook"
path = "src/codex_hook.rs"

[dependencies]
anyhow.workspace = true
reverie-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
