[package]
name = "reverie-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
default-run = "reverie-desktop"

[lints.rust]
# The `objc` 0.2 `msg_send!` macro expands to a `cfg!(feature = "cargo-clippy")`
# check. This crate has no such feature, so the `unexpected_cfgs` lint flags
# every `msg_send!` call. Declaring the value as expected silences only that
# third-party false positive and leaves the lint live for genuine typos.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
libghostty-vt = "0.1.1"
portable-pty = "0.9"
reverie-core = { path = "../../../packages/reverie-core" }
reverie-persistence = { path = "../../../packages/reverie-persistence" }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
toml_edit = "0.22"
uuid = { version = "1.23", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[workspace]
