[package]
name = "reverie-desktop"
version = "0.5.1"
edition = "2024"
license = "MIT"
publish = false
default-run = "reverie-desktop"
autobins = false

[features]
default = []
agent-automation = [
  "dep:block2",
  "dep:objc2",
  "dep:objc2-app-kit",
  "dep:objc2-foundation",
  "dep:objc2-web-kit",
]

[[bin]]
name = "reverie-desktop"
path = "src/main.rs"

[lints.rust]
# The `objc` 0.2 `msg_send!` macro expands to a `cfg!(feature = "cargo-clippy")`
# check. This crate has no such feature, so the `unexpected_cfgs` lint flags
# every `msg_send!` call. Declaring the value as expected silences only that
# third-party false positive and leaves the lint live for genuine typos.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
libghostty-vt = { version = "=0.2.0", default-features = false, features = ["link-dynamic"] }
# Direct dependency purely to make dylib staging in build.rs correct and
# deterministic. `libghostty-vt-sys` carries `links = "ghostty-vt"`, so depending
# on it directly guarantees Cargo runs its build script (which produces the
# dylib) before ours and hands our build script `DEP_GHOSTTY_VT_INCLUDE` to
# locate it. Without this edge the ordering is a race: on a cold build our
# staging ran first, found nothing, and shipped a 0-byte placeholder that made
# the app abort at launch (this is how v0.5.0 shipped broken). The crate itself
# is used only through the safe `libghostty-vt` wrapper above; features mirror
# the wrapper so the resolved feature set is unchanged.
libghostty-vt-sys = { version = "=0.2.0", default-features = false, features = ["link-dynamic"] }
portable-pty = "0.9"
reverie-core = { path = "../../../packages/reverie-core" }
reverie-persistence = { path = "../../../packages/reverie-persistence" }
# On-device speech engine. The native `capture` (cpal/rubato) and `asr`
# (fluidaudio/Swift build) features are enabled in their respective build
# phases; until then this is the pure command/event scaffold (the engine reports
# Unavailable). The crate stays Swift-free in the root workspace's `cargo test`.
reverie-speech = { path = "../../../packages/reverie-speech", features = ["capture", "asr"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
toml_edit = "0.22"
uuid = { version = "1.23", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
libc = "0.2"
# A passive keyboard event tap powers the lone/handed modifier "tap" dispatch
# shortcut (e.g. tap right-Control), which the global-shortcut plugin cannot
# express. Listen-only; requires the Input Monitoring permission. See dispatch_tap.rs.
core-graphics = "0.25"
core-foundation = "0.10"
block2 = { version = "0.6.2", optional = true }
objc2 = { version = "0.6.4", optional = true }
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep", "NSImage"], optional = true }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSError", "NSGeometry", "NSObject", "NSString"], optional = true }
objc2-web-kit = { version = "0.3.2", features = ["WKSnapshotConfiguration", "WKWebView", "block2"], optional = true }

[dev-dependencies]
tempfile = "3"

[workspace]
