[workspace]

[package]
name = "tauri-terminal-surface"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
libghostty-vt = "0.1.1"
reverie-core = { path = "../../../packages/reverie-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
